# couchplay

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SECURITY.md  io.github.hikaps.couchplay.json
.github/workflows/: ci.yml  flatpak.yml  release.yml
data/: io.github.hikaps.couchplay.metainfo.xml
data/dbus/: couchplay-helper.service  io.github.hikaps.CouchPlayHelper.conf
data/pipewire/: 50-couchplay.conf
data/polkit/: io.github.hikaps.couchplay.policy
helper/: AGENTS.md  CMakeLists.txt  CouchPlayHelper.cpp  CouchPlayHelper.h  PolkitActions.h  SystemOps.cpp  SystemOps.h  main.cpp
scripts/: install-helper.sh  install.sh
src/: CMakeLists.txt  main.cpp
src/core/: AGENTS.md  AudioManager.cpp  AudioManager.h  DeviceManager.cpp  DeviceManager.h  GamescopeInstance.cpp  GamescopeInstance.h  HeroicConfigManager.cpp  HeroicConfigManager.h  PresetManager.cpp  PresetManager.h  SessionManager.cpp  SessionManager.h  SessionRunner.cpp  SessionRunner.h  SettingsManager.cpp  SettingsManager.h  SteamConfigManager.cpp  VirtualDeviceWatcher.cpp  VirtualDeviceWatcher.h  WindowManager.cpp  WindowManager.h
src/dbus/: CouchPlayHelperClient.cpp  CouchPlayHelperClient.h
src/qml/: AGENTS.md  Main.qml
src/qml/components/: CollapsibleSection.qml  PresetSelector.qml
src/qml/components/dialogs/: AddPresetDialog.qml  EditPresetDialog.qml  InstallHelperDialog.qml
src/qml/pages/: DeviceAssignmentPage.qml  HomePage.qml  ProfilesPage.qml  SessionSetupPage.qml  SettingsPage.qml  UsersPage.qml
tests/: AGENTS.md  CMakeLists.txt  test_audiomanager.cpp  test_couchplayhelper.cpp  test_heroicconfigmanager.cpp  test_presetmanager.cpp  test_presetmanager_integration.cpp  test_sessionmanager.cpp  test_sessionrunner.cpp
